--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
     </div>
     <ul>
       <li>
-        <a target="_blank" href="https://github.com/LauraTorquato">GitHub</a>
+        <a target="_blank" href="https://github.com/LauraTorquato">
+          <img src="./img/silhueta-do-logotipo-do-github-em-um-quadrado.png" alt="GitHub">
+        </a>
       </li>
       <li>
-        <a target="_blank" href="https://www.linkedin.com/in/laura-torquato/">LinkedIn</a>
+        <a target="_blank" href="https://www.linkedin.com/in/laura-torquato/">
+          <img src="./img/linkedin.png" alt="LinkedIn">
+        </a>
       </li>
       <li>
-        <a href="mailto:laura.torquato@hotmail.com">Email</a>
+        <a href="mailto:laura.torquato@hotmail.com">
+          <img src="./img/o-email.png" alt="Email">
+        </a>
       </li>
     </ul>
   </header>
@@ -39,16 +45,21 @@
       <i class="fa-solid fa-angle-down"></i>
     </div>
 
-    <div id="about">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ipsa laboriosam deleniti illum recusandae! Error cupiditate, blanditiis vitae obcaecati ipsum distinctio ratione eveniet consequatur sed consectetur incidunt, iusto, aspernatur minus.</p>
+
+      <div class="flex">
+        <div>
+          <img src="./img/me.HEIC" alt="me at card" id="me">
+          <p>Hi, I'm Laura, I'm 24 years old and I live in São Paulo - Brazil. I've been working as a Front-end developer for 1 year. I really like what I do, I feel like I finally found myself in something! I currently work with <strong> React + Next.js </strong> and have knowledge in other technologies.In my free time I like to walk around SP, discover new restaurants, be with my friends, go to art exhibitions and study. If you want, contact me! See you soon :)</p>
+      </div>
     </div>
+
 
     <div class="form">
       <div>
         <p>Deixe seu contato!</p>
       </div>
 
-      <form action=""><input type="text" placeholder="seu melhor email">
+      <form action=""><input type="text" placeholder="seu melhor email :)">
       <button>Enviar</button></form>
     </div>
   </section>
