--- a/index.html
+++ b/index.html
@@ -46,21 +46,18 @@
     </div>
 
 
-      <div class="flex">
-        <div>
-          <img src="./img/me.HEIC" alt="me at card" id="me">
-          <p>Hi, I'm Laura, I'm 24 years old and I live in São Paulo - Brazil. I've been working as a Front-end developer for 1 year. I really like what I do, I feel like I finally found myself in something! I currently work with <strong> React + Next.js </strong> and have knowledge in other technologies.In my free time I like to walk around SP, discover new restaurants, be with my friends, go to art exhibitions and study. If you want, contact me! See you soon :)</p>
-      </div>
+      <div class="about">
+          <p>Hi, I'm Laura, I'm 24 years old and I live in São Paulo - Brazil. <br>I've been working as a Front-end developer for 1 year. I really like what I do, I feel like I finally found myself in something! I currently work with <strong> React + Next.js </strong> and have knowledge in other technologies.In my free time I like to walk around SP, discover new restaurants, be with my friends, go to art exhibitions and study. <br>If you want, contact me! <br>See you soon :)</p>
     </div>
 
 
     <div class="form">
       <div>
-        <p>Deixe seu contato!</p>
+        <p>Contact!</p>
       </div>
 
-      <form action=""><input type="text" placeholder="seu melhor email :)">
-      <button>Enviar</button></form>
+      <form action=""><input type="text" placeholder="Your best email :)">
+      <button>To send!</button></form>
     </div>
   </section>
 </main>
