--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./css/styles.css">
   <title>Lau Torquato</title>
 </head>
+
 <body>
   <header>
     <div>
@@ -41,15 +42,13 @@
       <h5>Front-End Developer</h5>
     </div>
 
-    <div id="arrow">
-      <i class="fa-solid fa-angle-down"></i>
+    <div id="arrow" onclick="displayAbout()">
+      <i id="animation" class="fa-solid fa-angle-down"></i>
     </div>
 
-
-      <div class="about">
+      <div style="display: none;" id="about">
           <p>Hi, I'm Laura, I'm 24 years old and I live in São Paulo - Brazil. <br>I've been working as a Front-end developer for 1 year. I really like what I do, I feel like I finally found myself in something! I currently work with <strong> React + Next.js </strong> and have knowledge in other technologies.In my free time I like to walk around SP, discover new restaurants, be with my friends, go to art exhibitions and study. <br>If you want, contact me! <br>See you soon :)</p>
     </div>
-
 
     <div class="form">
       <div>
@@ -61,6 +60,6 @@
     </div>
   </section>
 </main>
-
+<script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
